loopfor.LoopFor.scala.error
Compilation error:
LoopFor:10: error: reassignment to val
  b=b-1
   ^