loopfor.LoopFor.scala.code
var a:Int=0
var b:Int=0
while(!isOverBaggle()){
  forward();
  a=a+1
}
pickupBaggle()
for(b<-a to 0){
  backward();
  b=b-1
}
dropBaggle()